# huoma

./: .gitignore  CLAUDE.md  Cargo.toml  PHASE7_REPORT.md  PHASE8_REPORT.md  README.md  ROADMAP.md  TRACK_D_DESIGN.md  TRACK_F_DESIGN.md  build.rs
docs/design/: TRACK_F_DESIGN.md
docs/history/: BIANCHI_JOURNEY.md  PHASE6_REPORT.md  PHASE9_REPORT.md
examples/: hofstadter_butterfly.rs  tindall_eagle.rs  xxz_cross_check.rs
experiments/: .gitignore  angles_14q.npy  angles_18q.npy  angles_24q.npy  angles_28q.npy  generate_aer_ground_truth.py
proto/: arn.proto
python/huoma-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/huoma-py/src/: lib.rs
python/huoma-py/tests/: test_basic.py  test_pauli.py
results/VQ-110/: ANNEALER_THREAD.md  ANNEALER_THREAD_2D.md  INDEX.md  REPORT.md  pocket_ligand_perturbativ.tsv  realistic_BNZ_all.tsv  realistic_BNZ_decoy.tsv  realistic_BNZ_one.tsv  realistic_IND_one.tsv  realistic_N4B_decoy.tsv  realistic_N4B_one.tsv
results/VQ-110/annealer_stress_test/: ANNEALER_THREAD.md  ANNEALER_THREAD_2D.md
results/VQ-110/inputs/: T4_L99A_BNZ.pocket.json  T4_L99A_IND.pocket.json
results/VQ-110/t4_l99a_pocket/: pocket_ligand_kollektiv.tsv  realistic_IND.tsv  realistic_IND_decoy.tsv  realistic_N4B_all.tsv
results/VQ-110/t4_l99a_pocket/inputs/: T4_L99A_N4B.pocket.json
results/VQ-136/: REPORT.md
results/VQ-136/g2_smoke/: README.md  test_xxz.itensor.json  test_xxz.manifest.json
results/hofstadter/: REPORT.md  hyperbolic_7_3_r2.csv  square_8x8.csv
src/: accuracy.rs  allocator.rs  bench.rs  bianchi.rs  channel.rs  closed_surface.rs  error.rs  finite_difference_jacobian.rs  frequency.rs  hyperbolic.rs  kicked_ising.rs  lib.rs  magnetic.rs  mps.rs  partition.rs  peierls.rs  reassembly.rs  shootout.rs  ttn.rs  validation.rs  xxz.rs
src/topology/: heavy_hex.rs  mod.rs
src/ttn/: allocator.rs  boundary.rs  contraction.rs  dense.rs  feedback.rs  gauge.rs  heavy_hex.rs  kim_heavy_hex.rs  mod.rs  partition.rs  projected.rs  site.rs  subtree.rs  topology.rs
tests/: adiabatic_ramp_2d_scale.rs  adiabatic_ramp_pocket_ligand.rs  adiabatic_ramp_realistic_pocket.rs  adiabatic_ramp_scale.rs  kim_validation.rs  projected_ttn_scale.rs  topology_eagle.rs  ttn_eagle_heavy_hex.rs  ttn_tindall_127.rs
tests/golden/: ibm_eagle_127.json
