[package]
name = "huoma"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hiq-lab/huoma"
description = "Commensurability-guided MPS quantum simulator with Jacobian-driven adaptive bond truncation"
keywords = ["quantum", "tensor-network", "mps", "simulation", "floquet"]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
num-complex = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
faer = "0.24"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
