[package]
name = "huoma"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "LGPL-3.0-or-later"
repository = "https://github.com/hiq-lab/huoma"
description = "Commensurability-guided tree-tensor-network quantum simulator"
keywords = ["quantum", "tensor-network", "mps", "ttn", "simulation"]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
num-complex = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
faer = "0.24"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
