[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "huoma-py"
version = "0.2.0"
description = "Python bindings for the Huoma TTN/MPS quantum simulator"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Daniel Hinderink" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "numpy>=1.24",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "huoma_py"
strip = true
